fix: atualiza configurações de CORS #3